--- a/package.yaml
+++ b/package.yaml
@@ -36,9 +36,9 @@ ghc-options:
 library:
   source-dirs: src
   exposed-modules:
-    - JanusAST
-    - JanusInterp
-    - JanusParser
+    - AST
+    - Interpreter
+    - Parser
 
 executables:
   janus-extended-exe:
